persistencia/NoSQL/mongo-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  replicas: 1 #usar 1 sola replica
  template:
    metadata:
      labels:
        app: mongo
    spec:
      #terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo:4.0.17
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        storageClassName: ssd
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
