persistencia/NoSQL/mongo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017 #<puerto-del-servicio>
      targetPort: 27017 #<puerto-del-contenedor>
      nodePort: 30524 #Puerto externo
  type: NodePort  # ClusterIP
