persistencia/NoSQL/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: #/mongo/
            pathType: Prefix
            backend:
              service:
                name: mongo-service
                port:
                  number: 27017
          - path: #/user
            pathType: Prefix
            backend:
              service:
                name: mysql-service
                port:
                  number: 3306
